# comp362-2

./: .gitignore  week4Notes.txt
HafizTaseenLab01/: CMakeLists.txt  lab01List_Output.txt  list.c  list.h  main.c  typescriptLab01-processed.txt  typescriptLab01.txt  typescriptTutorialLab-processed.txt  typescriptTutorialLab-processed.txt:Zone.Identifier  typescriptTutorialLab.txt
HafizTaseenLab02/: CMakeLists.txt  CMakeLists.txt:Zone.Identifier  lab02Sub_Input.txt  lab02Sub_Output.txt  sub.c  typescriptLab02Configuration.txt  vimrc replacement.txt
HafizTaseenLab02/Submit/: dest.txt  sub.c  typescriptLab02-processed.txt  typescriptLab02.txt  typescriptLab02Configuration-processed.txt
HafizTaseenLab03/: notesWeek3.txt
HafizTaseenLab03/task1/: CMakeLists.txt  memory_layout.c  process_creation.c  typescriptLab03Task1-processed.txt  typescriptLab03Task1.txt
HafizTaseenLab03/task2/: iam.c  outputLab03Task2Terminal1.txt  outputLab03Task2Terminal2.txt  outputLab03Task2Terminal3.txt  outputLab03Task2Terminal4.txt  proc_hier.c  typescriptLab03Task2Terminal1-processed.txt  typescriptLab03Task2Terminal1.txt  typescriptLab03Task2Terminal2-processed.txt  typescriptLab03Task2Terminal2.txt  typescriptLab03Task2Terminal3-processed.txt  typescriptLab03Task2Terminal3.txt  typescriptLab03Task2Terminal4-processed.txt  typescriptLab03Task2Terminal4.txt
HafizTaseenLab04/: typescriptProcessor.c
HafizTaseenLab05/: matrixMult.c
HafizTaseenLab06/: typescriptLab06-processed.txt  typescriptLab06.txt
HafizTaseenLab06/lect06code/: CMakeLists.txt  pthread_prio.c
(+34 files in other folders)
